[gd_scene load_steps=22 format=3 uid="uid://b7ixi2bpxuuj6"]

[ext_resource type="Texture2D" uid="uid://ou6q7we48gkw" path="res://assets/graphics/FlyingLevel/Witch.png" id="1_iy80e"]
[ext_resource type="Script" path="res://game/enemies/witch/witch_3.gd" id="1_l8xxt"]
[ext_resource type="Script" path="res://components/test_components/move_component_2.gd" id="1_roplx"]
[ext_resource type="Texture2D" uid="uid://buoklgn5jc7hn" path="res://assets/graphics/FlyingLevel/Witch-cloth.png" id="2_u6h4b"]
[ext_resource type="Script" path="res://components/spawner_component.gd" id="4_14wm2"]
[ext_resource type="Script" path="res://components/test_components/move/move_steady_component.gd" id="5_1w648"]
[ext_resource type="Script" path="res://components/test_components/move/move_chase_component.gd" id="6_61ivi"]
[ext_resource type="Script" path="res://components/hurtbox_component.gd" id="6_uhnds"]
[ext_resource type="Script" path="res://components/hitbox_component.gd" id="7_hyvhi"]
[ext_resource type="Script" path="res://components/test_components/move/move_fall_component.gd" id="7_vnel1"]
[ext_resource type="Script" path="res://components/stats_component.gd" id="8_ufjqf"]
[ext_resource type="Script" path="res://components/hurt_component.gd" id="9_3lynr"]
[ext_resource type="PackedScene" uid="uid://dmtwk63vyvfnv" path="res://game/enemies/witch/witch_zap_2.tscn" id="9_h0eft"]
[ext_resource type="Script" path="res://components/color_flicker_component.gd" id="10_q70t0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_at2mi"]
atlas = ExtResource("1_iy80e")
region = Rect2(0, 0, 24, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_ev7q2"]
atlas = ExtResource("1_iy80e")
region = Rect2(24, 0, 24, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_3lvki"]
atlas = ExtResource("1_iy80e")
region = Rect2(48, 0, 24, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ismp"]
atlas = ExtResource("1_iy80e")
region = Rect2(72, 0, 24, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_m0lm7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_at2mi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ev7q2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3lvki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ismp")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4yter"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t8nd4"]

[node name="Witch3" type="Node2D"]
script = ExtResource("1_l8xxt")

[node name="Body" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_m0lm7")

[node name="Dress" type="Sprite2D" parent="."]
texture = ExtResource("2_u6h4b")

[node name="MoveComponent2" type="Node" parent="."]
script = ExtResource("1_roplx")

[node name="MoveSteadyComponent" type="Node" parent="MoveComponent2"]
script = ExtResource("5_1w648")

[node name="MoveChaseComponent" type="Node" parent="MoveComponent2"]
script = ExtResource("6_61ivi")

[node name="MoveFallComponent" type="Node" parent="MoveComponent2"]
script = ExtResource("7_vnel1")
acceleration = 5.0

[node name="SpawnerComponent" type="Node2D" parent="."]
script = ExtResource("4_14wm2")
what_to_spawn = ExtResource("9_h0eft")

[node name="FireRateTimer" type="Timer" parent="."]
one_shot = true

[node name="ShootingMarker" type="Marker2D" parent="."]
position = Vector2(-17, 3)

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
rect = Rect2(-12, -9, 24, 19)

[node name="HurtboxComponent" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0
script = ExtResource("6_uhnds")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
shape = SubResource("RectangleShape2D_4yter")

[node name="HitboxComponent" type="Area2D" parent="."]
collision_layer = 0
script = ExtResource("7_hyvhi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("RectangleShape2D_t8nd4")

[node name="StatsComponent" type="Node" parent="."]
script = ExtResource("8_ufjqf")

[node name="HurtComponent" type="Node" parent="." node_paths=PackedStringArray("stats_component", "hurtbox_component")]
script = ExtResource("9_3lynr")
stats_component = NodePath("../StatsComponent")
hurtbox_component = NodePath("../HurtboxComponent")

[node name="ColorFlickerComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("10_q70t0")
sprite = NodePath("../Dress")
